# 9-vidly-app/swagger.json
@@ -51,6 +51,22 @@
      "application/json"
    ],
    "paths": {
+    "/stats/genres/randoms": {
+      "get": {
+        "tags": [
+          "Stats"
+        ],
+        "summary": "Get stats for each page",
+        "responses": {
+          "200": {
+            "description": "Stats is found",
+            "schema": {
+              "$ref": "#/definitions/Stats"
+            }
+          }
+        }
+      }
+     },
      "/stats/rentals/recent": {
       "get": {
         "tags": [
